2011-05-11  Ivan Maidanski  <ivmai@mail.ru> (mostly really Ludovic Courtes)

	* tests/threadkey_test.c: New file.
	* .cvsignore (threadkey_test): Add.
	* tests/tests.am (TESTS, check_PROGRAMS): Add 'threadkey_test'.
	* tests/tests.am (threadkey_test_SOURCES, threadkey_test_LDADD):
	New variable.
	* Makefile.in: Regenerate.

2011-05-11  Ivan Maidanski  <ivmai@mail.ru>

	* pthread_support.c (GC_unregister_my_thread_inner): Don't call
	GC_remove_specific.
	* include/private/thread_local_alloc.h (GC_remove_specific):
	Remove (since it is empty for all targets).
	* pthread_support.c (GC_record_stack_base): New inline function.
	* win32_threads.c (GC_record_stack_base): Ditto.
	* pthread_support.c (GC_register_my_thread_inner): Invoke
	GC_record_stack_base.
	* win32_threads.c (GC_register_my_thread_inner): Ditto.
	* pthread_support.c (GC_register_my_thread): If thread is FINISHED
	then call GC_record_stack_base, clear FINISHED, initialize
	thread-local list and return success.
	* win32_threads.c (GC_register_my_thread): Ditto.
	* include/gc.h (GC_register_my_thread): Update documentation.
	* include/private/thread_local_alloc.h (GC_thread_key): Ditto.

2011-05-10  Ivan Maidanski  <ivmai@mail.ru>

	* thread_local_alloc.c (GC_malloc, GC_malloc_atomic): Join
	adjacent "#ifdef".
	* thread_local_alloc.c (GC_malloc_atomic): Call
	GC_core_malloc_atomic (instead of GC_core_malloc).

2011-05-10  Ivan Maidanski  <ivmai@mail.ru>

	* pthread_start.c (GC_start_rtn_prepare_thread): Change return
	type to GC_thread.
	* pthread_start.c (GC_inner_start_routine): Pass the current
	thread descriptor to pthread_cleanup_push (same as in
	win32_threads.c).
	* pthread_stop_world.c (GC_push_all_stacks): Rename "me" local
	variable to "self".
	* win32_threads.c (GC_push_all_stacks): Ditto.
	* pthread_stop_world.c (GC_suspend_all, GC_start_world): Rename
	"my_thread" local variable to "self".
	* pthread_support.c (GC_unregister_my_thread_inner): New static
	function.